# supermarket-receipts-parsing

./: LICENSE  README.md  pyproject.toml
src/receipts_parser/: parse_image.py
tests/: test_parse_image.py
tests/data/: expected-output-test-receipt.json
